# robotica

./: .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE  build.rs
.github/workflows/: rust.yaml
capnp/: example.capnp
examples/: simple_pub.rs  simple_sub.rs  simple_untyped_pub.rs  simple_untyped_sub.rs
robotica-cli/: Cargo.toml
robotica-cli/src/: main.rs  node.rs  topic.rs
robotica-foxglove/: Cargo.toml  sample_config.toml
robotica-foxglove/src/: config.rs  main.rs
robotica-types/: Cargo.toml  build.rs
robotica-types/proto/: types.proto
robotica-types/src/: lib.rs
src/: lib.rs  proto.rs  publisher.rs  subscriber.rs
