[package]
name = "robotica"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10"
flume = "0.11"
futures = "0.3"
prost = "0.13"
prost-types = "0.13"
thiserror = "1"
zenoh = "1.2"
robotica-types = { version = "0.1", path = "robotica-types" }
prost-reflect = { version = "0.14", features = ["serde", "text-format"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log-always"] }
simple_logger = "5.0"
log = "0.4"
tokio = "1.43"

[dev-dependencies]
anyhow = "1"
chrono = "0.4"
tokio = "1.43"

[workspace]
members = [
    "robotica-types",
    "robotica-cli"
]
