[package]
name = "robotica-foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
foxglove = "0.2.1"
prost-reflect = { version = "0.14.6", features = ["serde", "text-format"] }
robotica = { version = "0.1", path = ".." }
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43"
toml = "0.8.20"
