[package]
name = "robotica-types"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
prost-reflect = { version = "0.13.1", features = ["derive", "serde", "text-format"] }
prost-types = "0.12.6"

[build-dependencies]
anyhow = "1.0.86"
prost-build = "0.12.6"
prost-reflect-build = "0.13.0"
